@@ -4,6 +4,8 @@ checkbox (0.16.13) UNRELEASED; urgency=low
   * jobs/resource.txt.in, jobs/virtualization.txt.in - added kvm resource job
     which states whether the hardware supports KVM. Remove kvm_ok job and use the
     kvm resource job to determine if kvm_check_vm should run (LP: #1236776)
+  * jobs/keys.txt.in - added keys/keyboard-backlight job to test keyboard
+    backlight toggle key.
 
   [ Daniel Manrique ]
   * jobs/virtualization.txt.in: Set the kvm_check_vm test to run as root, to
